--- a/public/splashscreen.html
+++ b/public/splashscreen.html
@@ -22,7 +22,7 @@
 				src="./assets/logo-skizzle-dark-context.svg"
 				alt="Skizzle"
 			/>
-			<p class="skz-splashscreen__label">
+			<p id="loading" class="skz-splashscreen__label">
 				Chargement...
 			</p>
 			<div class="skz-splashscreen__progress">
@@ -61,6 +61,9 @@
 
 				return width;
 			}
+
+			const { translate } = require('./i18n.js');
+			document.getElementById('loading').innerHTML = translate('loading');
 
 			update();
 		</script>
