--- a/public/splashscreen.html
+++ b/public/splashscreen.html
@@ -22,7 +22,7 @@
 				src="./assets/logo-skizzle-dark-context.svg"
 				alt="Skizzle"
 			/>
-			<p id="loading" class="skz-splashscreen__label"></p>
+			<p class="skz-splashscreen__label"></p>
 			<div class="skz-splashscreen__progress">
 				<div class="skz-splashscreen__progress--bar"></div>
 			</div>
