feat(language): skizzle now support many languages (it's just french and english at this moment)

--- a/public/splashscreen.html
+++ b/public/splashscreen.html
@@ -22,9 +22,7 @@
 				src="./assets/logo-skizzle-dark-context.svg"
 				alt="Skizzle"
 			/>
-			<p class="skz-splashscreen__label">
-				Chargement...
-			</p>
+			<p class="skz-splashscreen__label"></p>
 			<div class="skz-splashscreen__progress">
 				<div class="skz-splashscreen__progress--bar"></div>
 			</div>
